fixed a small bug from the previous push; sticky nav would break on certain screen sizes

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -96,7 +96,7 @@
 /* Large Screens & Desktop */
 @media (min-width: 950px) {
   .logo {
-    width: 18%;
+    width: 30%;
   }
 
   .header-container {
